--- a/charts/forms-flow-analytics/templates/secret.yaml
+++ b/charts/forms-flow-analytics/templates/secret.yaml
@@ -13,5 +13,5 @@ stringData:
   REDASH_LOG_LEVEL: INFO
   REDASH_REDIS_URL: "redis://redis-exporter:6379/0" # url of the redis database to connect to
   REDASH_SECRET_KEY: redash-selfhosted
-  REDASH_MULTI_ORG: 'false'
+  REDASH_MULTI_ORG: "{{ .Values.redash.multiorg }}"
   REDASH_DATABASE_PASSWORD: "{{ .Values.database.password }}"
