--- a/charts/forms-flow-bpm/templates/deployment.yaml
+++ b/charts/forms-flow-bpm/templates/deployment.yaml
@@ -52,21 +52,48 @@ spec:
         - secretRef:
             name: "{{ .Chart.Name }}" # bpm environment variables
         env:
+        {{- if .Values.camunda.externalDatabase.existingDatabaseNameKey }}
+        - name: CAMUNDA_DATABASE_NAME
+          valueFrom:
+            secretKeyRef:
+              key: {{ .Values.camunda.externalDatabase.existingDatabaseNameKey }}
+              name: "{{ .Values.camunda.externalDatabase.existingSecretName }}"
+        {{- end }}
+        {{- if not .Values.camunda.externalDatabase.existingDatabaseNameKey }}
         - name: CAMUNDA_DATABASE_NAME
           valueFrom:
             configMapKeyRef:
               key: CAMUNDA_DATABASE_NAME
               name: "{{ .Chart.Name }}"
+        {{- end}}
+        {{- if .Values.camunda.externalDatabase.existingDatabasePortKey }}
+        - name: CAMUNDA_DATABASE_PORT
+          valueFrom:
+            secretKeyRef:
+              key: {{ .Values.camunda.externalDatabase.existingDatabasePortKey }}
+              name: "{{ .Values.camunda.externalDatabase.existingSecretName }}"
+        {{- end }}
+        {{- if not .Values.camunda.externalDatabase.existingDatabasePortKey }}
         - name: CAMUNDA_DATABASE_PORT
           valueFrom:
             configMapKeyRef:
               key: CAMUNDA_DATABASE_PORT
               name: "{{ .Chart.Name }}"
+        {{- end}}
+        {{- if .Values.camunda.externalDatabase.existingDatabaseHostKey }}
+        - name: CAMUNDA_DATABASE_SERVICE_NAME
+          valueFrom:
+            secretKeyRef:
+              key: {{ .Values.camunda.externalDatabase.existingDatabaseHostKey }}
+              name: "{{ .Values.camunda.externalDatabase.existingSecretName }}"
+        {{- end }}
+        {{- if not .Values.camunda.externalDatabase.existingDatabaseHostKey }}
         - name: CAMUNDA_DATABASE_SERVICE_NAME
           valueFrom:
             configMapKeyRef:
               key: DATABASE_SERVICE_NAME
               name: "{{ .Values.formsflow.configmap }}"
+        {{- end}}
         - name: KEYCLOAK_URL
           valueFrom:
             configMapKeyRef:
