--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -6,7 +6,9 @@ database:
   servicename: forms-flow-ai-postgresql-ha-pgpool
   port: 5432
   url: "postgresql://{{.Values.database.username}}:{{.Values.database.password}}@{{.Values.database.servicename}}:{{.Values.database.port}}/{{.Chart.Name}}"
-
+externalDatabase:
+  existingDatabaseUrlKey: "" 
+  existingSecretName: "" #name of the existing secret
 formsflow:
   auth: forms-flow-ai-auth
 ingress:
