--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -1,5 +1,6 @@
 ---
 Domain: #<DEFINE ME>
+replicas: 1
 postgresql:
   url: "postgresql://postgres:postgres@forms-flow-ai-postgresql-ha-pgpool:5432/{{.Chart.Name}}"
 externalDatabase:
