--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -1,5 +1,6 @@
 ---
 Domain: #<DEFINE_ME>
+replicas: 1
 analytics:
   configmap: forms-flow-analytics # name of formsflow analytics configmap
   secret: forms-flow-analytics #name of formsflow analytics secret 
@@ -34,3 +35,4 @@ image:
 config_path: /usr/share/nginx/html/config/
 webclient: "{{.Chart.Name}}"
 webname: formsflow
+UserAccesPermissions: ""
