Updated configmap for forms-flow-web

--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -8,6 +8,7 @@ metadata:
 data:
   KEYCLOAK_CLIENT: "{{tpl .Values.webclient .}}"
   APPLICATION_NAME: "{{tpl .Values.webname .}}"
+  USER_ACCESS_PERMISSIONS: "{{ .Values.UserAccesPermissions .}}"
   PUBLIC_WORKFLOW_ENABLED: "false"
   OPENTELEMETRY_SERVICE: "false"
   WEB_BASE_CUSTOM_URL: "{{tpl .Values.web.base_custom_url .}}"
