--- a/charts/forms-flow-analytics/templates/server-deployment.yaml
+++ b/charts/forms-flow-analytics/templates/server-deployment.yaml
@@ -18,61 +18,80 @@ spec:
     metadata:
       labels:
         app: '{{ .Chart.Name }}-server'
-      name: '{{ .Chart.Name }}-server'
     spec:
       containers:
-        - args:
-            - server
-          envFrom:
-            - configMapRef:
-                name: '{{ .Chart.Name }}' # default redash environment variables
-            - secretRef:
-                name: '{{ .Chart.Name }}' # default redash environment variables
-          env:
-            - name: DATABASE_NAME
-              valueFrom:
-                configMapKeyRef:
-                  key: DATABASE_NAME
-                  name: '{{ .Values.formsflow.configmap }}'
-            - name: DATABASE_PORT
-              valueFrom:
-                configMapKeyRef:
-                  key: DATABASE_PORT
-                  name: '{{ .Values.formsflow.configmap }}'
-            - name: DATABASE_SERVICE_NAME
-              valueFrom:
-                configMapKeyRef:
-                  key: DATABASE_SERVICE_NAME
-                  name: '{{ .Values.formsflow.configmap }}'
-            - name: DATABASE_URL
-              valueFrom:
-                configMapKeyRef:
-                  key: DATABASE_URL
-                  name: '{{ .Chart.Name}}'
-            - name: REDASH_WEB_WORKERS
-              value: '4'
-            - name: REDASH_GUNICORN_TIMEOUT
-              value: '600'
-            - name: REDASH_MULTI_ORG
-              value: '{{ .Values.redash.multiorg}}'
-          image: '{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}'
-          imagePullPolicy: Always
-          lifecycle:
-            postStart:
-              exec:
-                command:
-                  - '/bin/sh'
-                  - '-c'
-                  - 'python -B ./manage.py database create_tables'
-          name: '{{ .Chart.Name }}-server'
-          ports:
-            - containerPort: {{.Values.ingress.port}}
-              protocol: TCP
-          resources:
-            limits:
-              cpu: '{{ .Values.resources.limits.cpu }}'
-              memory: '{{ .Values.resources.limits.memory }}'
-            requests:
-              cpu: '{{ .Values.resources.requests.cpu }}'
-              memory: '{{ .Values.resources.requests.memory }}'
+      - name: '{{ .Chart.Name }}-server'
+        image: '{{ .Values.redash.image.registry }}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}'
+        imagePullPolicy: Always
+        args:
+          - server
+        envFrom:
+          - configMapRef:
+              name: '{{ .Values.formsflow.configmap }}'
+          - secretRef:
+              name: '{{ .Chart.Name }}'
+        env:
+          # - name: DATABASE_NAME
+          #   valueFrom:
+          #     configMapKeyRef:
+          #       key: DATABASE_NAME
+          #       name: '{{ .Values.formsflow.configmap }}'
+          # - name: DATABASE_PORT
+          #   valueFrom:
+          #     configMapKeyRef:
+          #       key: DATABASE_PORT
+          #       name: '{{ .Values.formsflow.configmap }}'
+          # - name: DATABASE_SERVICE_NAME
+          #   valueFrom:
+          #     configMapKeyRef:
+          #       key: DATABASE_SERVICE_NAME
+          #       name: '{{ .Values.formsflow.configmap }}'
+          # - name: REDASH_WEB_WORKERS
+          #   value: '4'
+          # - name: REDASH_GUNICORN_TIMEOUT
+          #   value: '1200'
+          # - name: REDASH_MULTI_ORG
+          #   value: '{{ .Values.redash.multiorg }}'
+          {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
+          - name: REDASH_DATABASE_URL
+            valueFrom:
+              secretKeyRef:
+                key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
+                name: "{{ .Values.externalDatabase.existingSecretName }}"
+          {{- end }}
+          {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
+          - name: REDASH_DATABASE_URL
+            valueFrom:
+              configMapKeyRef:
+                key: REDASH_DATABASE_URL
+                name: "{{ .Chart.Name }}"
+          {{- end }}
+          - name: REDASH_WEB_WORKERS
+            value: "4"
+          - name: GUNICORN_CMD_ARGS
+            value: "--timeout 300"
+          - name: REDASH_MULTI_ORG
+            valueFrom:
+              secretKeyRef:
+                key: REDASH_MULTI_ORG
+                name: "{{ .Chart.Name }}"  
+        lifecycle:
+          postStart:
+            exec:
+              command:
+                - '/bin/sh'
+                - '-c'
+                - 'python -B ./manage.py database create_tables'
+        ports:
+        - containerPort: {{ .Values.ingress.port }}
+          protocol: TCP
+        resources:
+          limits:
+            cpu: '{{ .Values.redash.resources.limits.cpu }}'
+            memory: '{{ .Values.redash.resources.limits.memory }}'
+          requests:
+            cpu: '{{ .Values.redash.resources.requests.cpu }}'
+            memory: '{{ .Values.redash.resources.requests.memory }}'
       restartPolicy: Always
+      imagePullSecrets:
+      - name: '{{ .Values.formsflow.auth }}'
