--- a/charts/forms-flow-analytics/charts/redis-exporter/values.yaml
+++ b/charts/forms-flow-analytics/charts/redis-exporter/values.yaml
@@ -1,5 +1,5 @@
 exporter:
-  image:  
+  image:
     registry: docker.io
     repository: oliver006/redis_exporter
     tag: v1.14.0-alpine
@@ -12,18 +12,18 @@ exporter:
       memory: 256Mi
 
 redis:
-  image:  
+  image:
     registry: docker.io
     repository: redis
     tag: 7.0-rc3-alpine
   resources:
     limits:
       cpu: 60m
-      memory: 1Gi    # Increased memory limit to 1Gi
+      memory: 1Gi # Increased memory limit to 1Gi
     requests:
       cpu: 50m
-      memory: 512Mi  # Increased memory request to 512Mi
+      memory: 512Mi # Increased memory request to 512Mi
 
 persistentVolumeClaim:
-  size: 2Gi 
-
+  size: 2Gi
+  storageClass: ''
