--- a/charts/forms-flow-analytics/templates/secret.yaml
+++ b/charts/forms-flow-analytics/templates/secret.yaml
@@ -3,15 +3,15 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    app: "{{ .Chart.Name }}"
-  name: "{{ .Chart.Name }}"
+    app: '{{ .Chart.Name }}'
+  name: '{{ .Chart.Name }}'
 stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
   POSTGRES_PASSWORD: postgres
-  PYTHONUNBUFFERED: "0"
+  PYTHONUNBUFFERED: '0'
   REDASH_COOKIE_SECRET: redash-selfhosted
   REDASH_LOG_LEVEL: INFO
-  REDASH_REDIS_URL: "redis://redis-exporter:6379/0" # url of the redis database to connect to
+  REDASH_REDIS_URL: 'redis://redis-exporter:6379/0' # url of the redis database to connect to
   REDASH_SECRET_KEY: redash-selfhosted
   REDASH_MULTI_ORG: 'false'
-  REDASH_DATABASE_PASSWORD: "{{ .Values.database.password }}"
+  REDASH_DATABASE_PASSWORD: '{{ .Values.formsflow.secret }}'
