--- a/charts/forms-flow-admin/templates/deployment.yaml
+++ b/charts/forms-flow-admin/templates/deployment.yaml
@@ -38,35 +38,72 @@ spec:
           name: admin-filebeat
       {{- end}}
       - env:
+        {{- if .Values.ExternalDatabase.ExistingDatabaseNameKey }}
         - name: DATABASE_NAME
           valueFrom:
-            configMapKeyRef:
+            secretKeyRef:
+            key: {{ .Values.ExternalDatabase.ExistingDatabaseNameKey }}
+            name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
+        {{- end }}
+        {{- if not .Values.ExternalDatabase.ExistingDatabaseNameKey }}
+        - name: DATABASE_NAME
+          valueFrom:
+            secretKeyRef:
               key: DATABASE_NAME
-              name: "{{ .Values.formsflow.configmap }}"
+              name: "{{ .Chart.Name }}"
+        {{- end }}
+        {{- if .Values.ExternalDatabase.ExistingDatabaseUserNameKey }}
+        - name: DATABASE_USERNAME
+          valueFrom:
+            secretKeyRef:
+            key: {{ .Values.ExternalDatabase.ExistingDatabaseUserNameKey }}
+            name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
+        {{- end }}
+        {{- if not .Values.ExternalDatabase.ExistingDatabaseUserNameKey }}
+        - name: DATABASE_USERNAME
+          valueFrom:
+            secretKeyRef:
+              key: DATABASE_USERNAME
+              name: "{{ .Chart.Name }}"
+        {{- end }}
+        {{- if .Values.ExternalDatabase.ExistingDatabasePasswordKey }}
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+            key: {{ .Values.ExternalDatabase.ExistingDatabasePasswordKey }}
+            name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
+        {{- end }}
+        {{- if not .Values.ExternalDatabase.ExistingDatabasePasswordKey }}
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: DATABASE_PASSWORD
+              name: "{{ .Chart.Name }}"
+        {{- end }}
         - name: DATABASE_PORT
           valueFrom:
             configMapKeyRef:
               key: DATABASE_PORT
-              name: "{{ .Values.formsflow.configmap }}"
-        - name: DATABASE_SERVICE_NAME
-          valueFrom:
-            configMapKeyRef:
-              key: DATABASE_SERVICE_NAME
-              name: "{{ .Values.formsflow.configmap }}"
-        {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: DATABASE_URL
+              name: "{{ .Chart.Name }}"
+        {{- if .Values.ExternalDatabase.ExistingDatabaseHostKey }}
+        - name: DATABASE_HOST
           valueFrom:
             secretKeyRef:
-              key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
-              name: "{{ .Values.externalDatabase.existingSecretName }}"
+            key: {{ .Values.ExternalDatabase.ExistingDatabaseHostKey }}
+            name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
         {{- end }}
-        {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
+        {{- if not .Values.ExternalDatabase.ExistingDatabaseHostKey }}
+        - name: DATABASE_HOST
+          valueFrom:
+            secretKeyRef:
+              key: DATABASE_HOST
+              name: "{{ .Chart.Name }}"
+        {{- end }}
         - name: DATABASE_URL
           valueFrom:
             configMapKeyRef:
               key: DATABASE_URL
               name: "{{ .Chart.Name }}"
-        {{- end }}
         - name: JWT_OIDC_ALGORITHMS
           valueFrom:
             configMapKeyRef:
