--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -2,7 +2,12 @@
 Domain: #<DEFINE ME>
 replicas: 1
 postgresql:
-  url: "postgresql://postgres:postgres@forms-flow-ai-postgresql-ha-pgpool:5432/{{.Chart.Name}}"
+  databasename: "forms-flow-admin"
+  username: "postgres"
+  password: "postgres"
+  port: 5432
+  host: "forms-flow-ai-postgresql-ha-pgpool"
+  url: "postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:5432/${DATABASE_NAME}"
 externalDatabase:
   existingDatabaseUrlKey: "" 
   existingSecretName: "" #name of the existing secret
