--- a/charts/forms-flow-api/templates/secret.yaml
+++ b/charts/forms-flow-api/templates/secret.yaml
@@ -6,3 +6,8 @@ metadata:
     app: "{{ .Chart.Name }}"
   name: "{{ .Chart.Name }}"
 stringData:
+  FORMSFLOW_API_DB_USER: {{ .Values.database.username }}
+  FORMSFLOW_API_DB_PASSWORD: {{ .Values.database.password }}
+  FORMSFLOW_API_DB_NAME: {{ .Values.database.dbName }}
+  FORMSFLOW_API_HOSTNAME: {{ .Values.database.dbName }}
+
