--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -2,10 +2,17 @@
 Domain: #<DEFINE_ME>
 replicas: 1
 database:
-  url: "postgresql://postgres:postgres@forms-flow-ai-postgresql-ha-pgpool:5432/{{.Chart.Name}}"
-externalDatabase:
-  existingDatabaseUrlKey: "" 
-  existingSecretName: "" #name of the existing secret
+  username: "postgres"
+  password: "postgres"
+  dbName: "forms-flow-api"
+  host: "forms-flow-ai-postgresql-ha-pgpool"
+  port: 5432
+  url: "postgresql://${FORMSFLOW_API_DB_USER}:${FORMSFLOW_API_DB_PASSWORD}@forms-flow-ai-postgresql-ha-pgpool:5432/${FORMSFLOW_API_DB_NAME}"
+ExternalDatabase:
+  ExistingDatabaseNameKey: ""
+  ExistingDatabaseUserNameKey: ""
+  ExistingDatabasePasswordKey: ""
+  ExistingSecretName: "" #name of the existing secret
 
 resources:
   limits:
