--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -110,11 +110,20 @@ spec:
             configMapKeyRef:
               key: FORMSFLOW_API_PORT
               name: "{{ .Chart.Name }}"
+        {{- if .Values.ExternalDatabase.ExistingDatabasHostKey }}
+        - name: FORMSFLOW_API_HOSTNAME
+          valueFrom:
+            secretKeyRef:
+              key: {{ .Values.ExternalDatabase.ExistingDatabaseHostKey }}
+              name: "{{ .Values.ExternalDatabase.ExistingSecretName }}"
+        {{- end }}
+        {{- if not .Values.ExternalDatabase.ExistingDatabaseHostKey }}
         - name: FORMSFLOW_API_HOSTNAME
           valueFrom:
             secretKeyRef:
               key: FORMSFLOW_API_HOSTNAME
               name: "{{ .Chart.Name }}"
+        {{- end }}
         - name: DATABASE_URL
           valueFrom:
             configMapKeyRef:
