--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -51,7 +51,7 @@ forms-flow-auth:
 mongodb:
   image:
     tag: 4.2.21-debian-10-r8
-  enabled: true
+  enabled: false
   fullnameOverride: 'forms-flow-ai-mongodb'
   clusterDomain: cluster.local
   architecture: replicaset
@@ -137,14 +137,13 @@ postgresql-ha:
     containerPorts:
       postgresql: 5432
     podSecurityContext:
-      enabled: false
+      enabled: true
       fsGroup: 1001
     containerSecurityContext:
-      enabled: false
+      enabled: true
       runAsUser: 1001
       runAsNonRoot: true
       readOnlyRootFilesystem: false
-
     livenessProbe:
       enabled: false
     readinessProbe:
@@ -153,7 +152,6 @@ postgresql-ha:
     password: 'postgres'
     database: 'forms-flow-ai'
     postgresPassword: 'changeme'
-
     repmgrUsername: repmgr
     repmgrPassword: 'changeme'
     repmgrDatabase: repmgr
@@ -165,6 +163,13 @@ postgresql-ha:
     repmgrChildNodesCheckInterval: 5
     repmgrChildNodesConnectedMinCount: 1
     repmgrChildNodesDisconnectTimeout: 30
+    initContainers:
+      - name: volume-permissions
+        image: busybox
+        command: ['sh', '-c', 'mkdir -p /bitnami/postgresql && chmod -R 777 /bitnami/postgresql']
+        volumeMounts:
+          - name: data
+            mountPath: /bitnami/postgresql
     initdbScripts:
       init_script.sql: |
         CREATE DATABASE "forms-flow-admin";
@@ -189,10 +194,10 @@ postgresql-ha:
       pullPolicy: IfNotPresent
     replicaCount: 1
     podSecurityContext:
-      enabled: false
+      enabled: true
       fsGroup: 1001
     containerSecurityContext:
-      enabled: false
+      enabled: true
       runAsUser: 1001
       runAsNonRoot: true
       readOnlyRootFilesystem: false
