--- a/charts/forms-flow-analytics/templates/deployment.yaml
+++ b/charts/forms-flow-analytics/templates/deployment.yaml
@@ -1,14 +1,15 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: "{{ .Chart.Name }}-server"
-  name: "{{ .Chart.Name }}-server"
+    app: '{{ .Chart.Name }}-server'
+  name: '{{ .Chart.Name }}-server'
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: "{{ .Chart.Name }}-server"
+      app: '{{ .Chart.Name }}-server'
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -17,281 +18,179 @@ spec:
   template:
     metadata:
       labels:
-        app: "{{ .Chart.Name }}-server"
-      name: "{{ .Chart.Name }}-server"
+        app: '{{ .Chart.Name }}-server'
     spec:
       containers:
-      - args:
-        - server
-        envFrom:
-        - configMapRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        - secretRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        env:
-        {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
-              name: "{{ .Values.externalDatabase.existingSecretName }}"
-        {{- end }}
-        {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            configMapKeyRef:
-              key: REDASH_DATABASE_URL
-              name: "{{ .Chart.Name }}"
-        {{- end }}
-        - name: REDASH_WEB_WORKERS
-          value: "4"
-        - name: GUNICORN_CMD_ARGS
-          value: "--timeout 300"
-        - name: REDASH_MULTI_ORG
-          valueFrom:
-            secretKeyRef:
-              key: REDASH_MULTI_ORG
-              name: "{{ .Chart.Name }}"
-        image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
+      - name: '{{ .Chart.Name }}-server'
+        image: '{{ .Values.redash.image.registry }}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}'
         imagePullPolicy: Always
+        args:
+          - server
+        envFrom:
+          - configMapRef:
+              name: '{{ .Values.formsflow.configmap }}'
+          - secretRef:
+              name: '{{ .Chart.Name }}'
+        env:
+          # - name: DATABASE_NAME
+          #   valueFrom:
+          #     configMapKeyRef:
+          #       key: DATABASE_NAME
+          #       name: '{{ .Values.formsflow.configmap }}'
+          # - name: DATABASE_PORT
+          #   valueFrom:
+          #     configMapKeyRef:
+          #       key: DATABASE_PORT
+          #       name: '{{ .Values.formsflow.configmap }}'
+          # - name: DATABASE_SERVICE_NAME
+          #   valueFrom:
+          #     configMapKeyRef:
+          #       key: DATABASE_SERVICE_NAME
+          #       name: '{{ .Values.formsflow.configmap }}'
+          # - name: REDASH_WEB_WORKERS
+          #   value: '4'
+          # - name: REDASH_GUNICORN_TIMEOUT
+          #   value: '1200'
+          # - name: REDASH_MULTI_ORG
+          #   value: '{{ .Values.redash.multiorg }}'
+          {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
+          - name: REDASH_DATABASE_URL
+            valueFrom:
+              secretKeyRef:
+                key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
+                name: "{{ .Values.externalDatabase.existingSecretName }}"
+          {{- end }}
+          {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
+          - name: REDASH_DATABASE_URL
+            valueFrom:
+              configMapKeyRef:
+                key: REDASH_DATABASE_URL
+                name: "{{ .Chart.Name }}"
+          {{- end }}
+          - name: REDASH_WEB_WORKERS
+            value: "4"
+          - name: GUNICORN_CMD_ARGS
+            value: "--timeout 300"
+          - name: REDASH_MULTI_ORG
+            valueFrom:
+              secretKeyRef:
+                key: REDASH_MULTI_ORG
+                name: "{{ .Chart.Name }}"  
         lifecycle:
           postStart:
             exec:
-              command: ["/bin/sh", "-c", "python -v ./manage.py database create_tables"]
-        name: "{{ .Chart.Name }}-server"
+              command:
+                - '/bin/sh'
+                - '-c'
+                - 'python -B ./manage.py database create_tables'
         ports:
-        - containerPort: {{ int .Values.ingress.port }}
+        - containerPort: {{ .Values.ingress.port }}
           protocol: TCP
         resources:
           limits:
-            cpu: "{{ .Values.resources.limits.cpu }}"
-            memory: "{{ .Values.resources.limits.memory }}"
+            cpu: '{{ .Values.resources.limits.cpu }}'
+            memory: '{{ .Values.resources.limits.memory }}'
           requests:
-            cpu: "{{ .Values.resources.requests.cpu }}"
-            memory: "{{ .Values.resources.requests.memory }}"
+            cpu: '{{ .Values.resources.requests.cpu }}'
+            memory: '{{ .Values.resources.requests.memory }}'
       restartPolicy: Always
       imagePullSecrets:
-      - name: "{{ .Values.formsflow.auth}}"
+      - name: '{{ .Values.formsflow.auth }}'
+
+
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: "{{ .Chart.Name }}-adhoc-worker"
-  name: "{{ .Chart.Name }}-adhoc-worker"
+    app: '{{ .Chart.Name }}-scheduler'
+  name: '{{ .Chart.Name }}-scheduler'
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: "{{ .Chart.Name }}-adhoc-worker"
-  strategy:
+      app: '{{ .Chart.Name }}-scheduler'
+  strategy: {}
   template:
     metadata:
       labels:
-        app: "{{ .Chart.Name }}-adhoc-worker"
+        app: '{{ .Chart.Name }}-scheduler'
     spec:
-      containers:
-      - args:
-        - worker
-        envFrom:
-        - configMapRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        - secretRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        env:
-        {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
-              name: "{{ .Values.externalDatabase.existingSecretName }}"
-        {{- end }}
-        {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            configMapKeyRef:
-              key: REDASH_DATABASE_URL
-              name: "{{ .Chart.Name }}"
-        {{- end }} 
-        - name: WORKERS_COUNT
-          value: "2"
-        image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
-        name: "{{ .Chart.Name }}-adhoc-worker"
-        imagePullPolicy: Always
-        resources:
-          limits:
-            cpu: "{{ .Values.resources.limits.cpu }}"
-            memory: "{{ .Values.resources.limits.memory }}"
-          requests:
-            cpu: "{{ .Values.resources.requests.cpu }}"
-            memory: "{{ .Values.resources.requests.memory }}"
       restartPolicy: Always
-      imagePullSecrets:
-      - name: "{{ .Values.formsflow.auth}}"
+      securityContext:
+        fsGroup: 2000 # Setting the file system group
+      containers:
+        - name: '{{ .Chart.Name }}-scheduler'
+          image: '{{ .Values.redash.image.registry }}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}'
+          imagePullPolicy: Always
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
+          args:
+            - scheduler
+          envFrom:
+            - configMapRef:
+                name: '{{ .Values.formsflow.configmap }}' # Default Redash environment variables
+            - secretRef:
+                name: '{{ .Chart.Name }}' # default redash environment variables
+          resources:
+            limits:
+              cpu: '{{ .Values.resources.limits.cpu }}'
+              memory: '{{ .Values.resources.limits.memory }}'
+            requests:
+              cpu: '{{ .Values.resources.requests.cpu }}'
+              memory: '{{ .Values.resources.requests.memory }}'
+
 ---
+{{- range $workerName, $config := .Values.workers }}
+{{- $workerConfig := mergeOverwrite (deepCopy $.Values.worker) $config }}
+{{- $context := mergeOverwrite (deepCopy $) (dict "workerName" $workerName) }}
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: forms-flow-analytics-worker
   labels:
-    app: "{{ .Chart.Name }}-scheduled-worker"
-  name: "{{ .Chart.Name }}-scheduled-worker"
+    app: forms-flow-analytics-worker
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: "{{ .Chart.Name }}-scheduled-worker"
-  strategy:
+      app: forms-flow-analytics-worker
   template:
     metadata:
       labels:
-        app: "{{ .Chart.Name }}-scheduled-worker"
+        app: forms-flow-analytics-worker
     spec:
       containers:
-      - args:
-        - worker
-        envFrom:
-        - configMapRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        - secretRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        env:
-        {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
-              name: "{{ .Values.externalDatabase.existingSecretName }}"
-        {{- end }}
-        {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            configMapKeyRef:
-              key: REDASH_DATABASE_URL
-              name: "{{ .Chart.Name }}"
-        {{- end }}
-        - name: WORKERS_COUNT
-          value: "1"
-        image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
-        name: "{{ .Chart.Name }}-scheduled-worker"
-        resources:
-          limits:
-            cpu: "{{ .Values.resources.limits.cpu }}"
-            memory: "{{ .Values.resources.limits.memory }}"
-          requests:
-            cpu: "{{ .Values.resources.requests.cpu }}"
-            memory: "{{ .Values.resources.requests.memory }}"
-      restartPolicy: Always
-      imagePullSecrets:
-      - name: "{{ .Values.formsflow.auth}}"
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  labels:
-    app: "{{ .Chart.Name }}-scheduler"
-  name: "{{ .Chart.Name }}-scheduler"
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: "{{ .Chart.Name }}-scheduler"
-  strategy:
-  template:
-    metadata:
-      labels:
-        app: "{{ .Chart.Name }}-scheduler"
-    spec:
-      containers:
-      - args:
-        - scheduler
-        envFrom:
-        - configMapRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        - secretRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        env:
-        {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
-              name: "{{ .Values.externalDatabase.existingSecretName }}"
-        {{- end }}
-        {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            configMapKeyRef:
-              key: REDASH_DATABASE_URL
-              name: "{{ .Chart.Name }}"
-        {{- end }}
-        image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
-        name: "{{ .Chart.Name }}-scheduler"
-        imagePullPolicy: Always
-        resources:
-          limits:
-            cpu: "{{ .Values.resources.limits.cpu }}"
-            memory: "{{ .Values.resources.limits.memory }}"
-          requests:
-            cpu: "{{ .Values.resources.requests.cpu }}"
-            memory: "{{ .Values.resources.requests.memory }}"
-      restartPolicy: Always
-      imagePullSecrets:
-      - name: "{{ .Values.formsflow.auth}}"
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  labels:
-    app: "{{ .Chart.Name }}-worker"
-  name: "{{ .Chart.Name }}-worker"
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: "{{ .Chart.Name }}-worker"
-  strategy:    
-  template:
-    metadata:
-      labels:
-        app: "{{ .Chart.Name }}-worker"
-    spec:
-      containers:
-      - args:
-        - worker
-        envFrom:
-        - configMapRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        - secretRef:
-            name: "{{ .Chart.Name }}" # default redash environment variables
-        env:
-        {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
-              name: "{{ .Values.externalDatabase.existingSecretName }}"
-        {{- end }}
-        {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
-          valueFrom:
-            configMapKeyRef:
-              key: REDASH_DATABASE_URL
-              name: "{{ .Chart.Name }}"
-        {{- end }}
-        - name: QUEUES
-          value: "periodic_emails,default"
-        - name: WORKERS_COUNT
-          value: "1"
-        image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
-        name: "{{ .Chart.Name }}-worker"
-        imagePullPolicy: Always
-        resources:
-          limits:
-            cpu: "{{ .Values.resources.limits.cpu }}"
-            memory: "{{ .Values.resources.limits.memory }}"
-          requests:
-            cpu: "{{ .Values.resources.requests.cpu }}"
-            memory: "{{ .Values.resources.requests.memory }}"
-      restartPolicy: Always
-      imagePullSecrets:
-      - name: "{{ .Values.formsflow.auth}}"
+        - name: forms-flow-analytics-worker
+          image: "{{ $.Values.redash.image.registry}}/{{ $.Values.redash.image.repository }}:{{ $.Values.redash.image.tag }}"
+          imagePullPolicy: Always
+          args:
+            - worker
+          {{- with $workerConfig.volumeMounts }}
+          volumeMounts: {{ toYaml . | nindent 10 }}
+          {{- end }}
+          {{- with $workerConfig.livenessProbe }}
+          livenessProbe: {{ toYaml . | nindent 10 }}
+          {{- end }}
+          {{- with $workerConfig.resources }}
+          resources: {{ toYaml . | nindent 10 }}
+          {{- end }}
+      {{- with $workerConfig.volumes }}
+      volumes: {{ toYaml . | nindent 6 }}
+      {{- end }}
+      {{- with $workerConfig.nodeSelector }}
+      nodeSelector: {{ toYaml . | nindent 6 }}
+      {{- end }}
+      {{- with $workerConfig.affinity }}
+      affinity: {{ toYaml . | nindent 6 }}
+      {{- end }}
+      {{- with $workerConfig.tolerations }}
+      tolerations: {{ toYaml . | nindent 6 }}
+      {{- end }}
+{{- end }}
