updated postgresql and mongodb

--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -130,7 +130,7 @@ postgresql-ha:
     password: "postgres"
     database: "forms-flow-idm"
     postgresPassword: "changeme"
-
+    usePasswordFile: "false"
     repmgrUsername: repmgr
     repmgrPassword: "changeme"
     repmgrDatabase: repmgr
