--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -51,7 +51,7 @@ forms-flow-auth:
 
 mongodb:
   image:
-    tag: 4.2.21-debian-10-r8
+    tag: 7.0.12-debian-12-r5 #4.2.21-debian-10-r8
   enabled: true
   fullnameOverride: "forms-flow-ai-mongodb"
   clusterDomain: cluster.local
@@ -68,19 +68,19 @@ mongodb:
     rootUser: root
     rootPassword: "changeme"
     replicaSetKey: "formsflow"
-  initdbScripts:
-     init-mongo.js: |
-           use admin
-           db.createUser({
-              user: 'mongodb',     
-              pwd: 'changeme',   
-              roles: [
-                {
-                   role: 'readWrite',
-                   db: 'formsflow',
-                },
-              ],
-           });
+  # initdbScripts:
+  #    init-mongo.js: |
+  #          use admin
+  #          db.createUser({
+  #             user: 'mongodb',     
+  #             pwd: 'changeme',   
+  #             roles: [
+  #               {
+  #                  role: 'readWrite',
+  #                  db: 'formsflow',
+  #               },
+  #             ],
+  #          });
   replicaSetName: rs0
   replicaSetHostnames: true
   directoryPerDB: false
@@ -140,7 +140,7 @@ postgresql-ha:
     image:
       registry: docker.io
       repository: bitnami/postgresql-repmgr
-      tag: 16.3.0-debian-12-r11
+      tag: 16.3.0-debian-12-r20
     replicaCount: 3
     containerPorts:
       postgresql: 5432
@@ -161,7 +161,7 @@ postgresql-ha:
     password: "postgres"
     database: "forms-flow-ai"
     postgresPassword: "changeme"
-
+    usePasswordFile: "false"
     repmgrUsername: repmgr
     repmgrPassword: "changeme"
     repmgrDatabase: repmgr
